# JustNothing-TestModule

./: .gitignore  ContextManager.java  README.MD  compile_result.txt  gradle.properties  gradlew  methods  settings.gradle
.github/workflows/: release.yml
app/: build.gradle
app/magisk/: install.sh
app/magisk/common/: post-fs-data.sh  service.sh
app/magisk/scripts/: methods  methods-concurrent-test  methods-daemon
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/arm64-v8a/: methods_client  methods_client_arm64-v8a
app/src/main/assets/armeabi-v7a/: methods_client  methods_client_armeabi-v7a
app/src/main/assets/codebase/: README.md  activity_launch_monitor  activity_launch_monitor.java  blackjack  broadcast_monitor  broadcast_monitor.java  cultivation  dungeon_crawler  guess_number  intent_monitor  intent_monitor.java  lost_forest  modify_return_value  modify_return_value.java  network_monitor  network_monitor.java  personality_test  rock_paper_scissors  service_create_monitor  service_create_monitor.java  sharedpreferences_monitor  sharedpreferences_monitor.java  space_trader  sync.ps1  sync_to_device.bat  text_adventure  toast_monitor  toast_monitor.java  (+2 more)
app/src/main/cpp/: CMakeLists.txt  methods_client.cpp  sandbox_test.cpp  seccomp_user_notif.cpp
app/testmodule/: ExampleUnitTest.java
docs/: ENGINE_V2_DESIGN.md
engine/: README.MD  build.gradle
engine_new/: build.gradle  build_test.gradle  settings_test.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rich/: build.gradle
(+1447 files in other folders)
